Sat Jun 10 22:32:03 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ACE-INSTALL.html: Corrected a bunch of platform build things and
          hopefully clarified the sections a bit.

        * bin/make_release: Removed the search for, and chmod for, dsp/dsw
          files - they're for MSVC6 which is no longer generated.

Sat Jun 10 10:07:32 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Thread_Manager.cpp:
          Fix for compiler errors.

Sat Jun 10 04:31:54 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/automake.features:

          Define MPC feature variable "wxWindows" to 1.

        * bin/MakeProjectCreator/config/wxwindows.mpb:

          Add automake specific definitions for compile_flags,
          linkflags, and pure_libs.

Fri Jun  9 19:25:19 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Thread_Manager.h: Added a new parameter to wait() that
          determines whether relative or absolute time is used.  Thanks to
          Sonicfly Zhou <zhoucn at txsec dot com> for this idea.

Fri Jun  9 14:06:52 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Hash_Map_With_Allocator_T.{h,inl,cpp}: Enhanced this class
          so that it compiles with the new "two allocator"
          ACE_Hash_Map_Manager_Ex class.  This class needs to be improved
          so that it actually leverages the two allocator features, but
          that's something for the future.

Fri Jun  9 13:15:38 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Hash_Map_Manager_T.h: Clarified the meaning of the
          constructor and open() parameters.

Fri Jun  9 13:07:40 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Hash_Map_Manager_T.cpp (open): If the user doesn't supply an
          entry_alloc pointer then use the table_alloc pointer.

Fri Jun  9 13:00:22 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
