@@ -1738,14 +1738,14 @@ ACE_Thread_Manager::exit (ACE_THR_FUNC_RETURN status, int do_thr_exit)
 
 int
 ACE_Thread_Manager::wait (const ACE_Time_Value *timeout,
-                          int abandon_detached_threads,
-                          int use_absolute_time)
+                          bool abandon_detached_threads,
+                          bool use_absolute_time)
 {
   ACE_TRACE ("ACE_Thread_Manager::wait");
 
   ACE_Time_Value local_timeout;
   // Check to see if we're using absolute time or not.
-  if (use_absolute_time == 0 && timeout != 0)
+  if (use_absolute_time == false && timeout != 0)
     {
       local_timeout = *timeout;
       local_timeout += ACE_OS::gettimeofday ();
