@@ -1,3 +1,8 @@
+Mon Jun 12 01:30:03 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * ace/Thread_Manager.cpp (wait): Changed the flag parameters to be
+          bool rathet than int.  Thanks to Johnny for this suggestion.
+
 Sat Jun 10 22:32:03 UTC 2006  Steve Huston  <shuston@riverace.com>
 
         * ACE-INSTALL.html: Corrected a bunch of platform build things and
